--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
+// dependencies, run npm install instead
+backend/node_modules/**/**
+backend/package-lock.json
+frontend/node_modules/**/**
 frontend/package-lock.json
